fix tags grid overflow from main grid content

--- a/source/ui/styles/tags.scss
+++ b/source/ui/styles/tags.scss
@@ -1,6 +1,6 @@
 .tags-grid{
   display: grid;
-  grid-template-columns: repeat(4, 1fr) [end];
+  grid-template-columns: repeat(4, minmax(0, 1fr)) [end];
   grid-auto-flow: row;
   grid-auto-rows: auto;
   gap: .5rem;
